--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,6 +6,7 @@
   --menu-active-text: var(--el-menu-active-color);
   --menu-hover: #263445;
   --sidebar-logo-background: #2d3748;
+  --main-bg-color: #f5f8fd;
 
   // 修复表格 fixed 列被选中后由于透明色导致叠字的 bug
   .el-table {
